--- a/src/components/main/sanfona/Sanfona.module.css
+++ b/src/components/main/sanfona/Sanfona.module.css
@@ -1,10 +1,14 @@
-.sanfonaContent{
-    grid-column: 1 / 13;
-    height:84.62rem ;
+.sanfonaContainer{
+    grid-column: 1 / 13;    
     display: grid;
     grid-template-columns: repeat(12, 1fr);
     align-content: flex-start;
     padding: 2rem;
+}
+.sanfonaContent{
+    grid-column: 4 / 10;
+    background-color: #6F2282;
+    margin-bottom: 1rem;
 }
 
 .boxSanfona{
